--- a/electronicstore/electronicstore.csproj
+++ b/electronicstore/electronicstore.csproj
@@ -169,6 +169,12 @@
     <Compile Include="PrintBill.Designer.cs">
       <DependentUpon>PrintBill.cs</DependentUpon>
     </Compile>
+    <Compile Include="print_bill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="print_bill.Designer.cs">
+      <DependentUpon>print_bill.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchasePOS.cs">
@@ -206,6 +212,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PrintBill.resx">
       <DependentUpon>PrintBill.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="print_bill.resx">
+      <DependentUpon>print_bill.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
